fixed flex-basis of map-container and added flex-wrap

--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -91,7 +91,8 @@ nav {
 }
 
 #sliders {
-    display: flex
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #sliders > div {
@@ -105,11 +106,9 @@ nav {
 }
 
 #map-container {
-    flex-basis: auto;
+    flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 1;
-    min-width: 0;
-    min-height: 0;
 }
 
 input {
@@ -120,6 +119,7 @@ input {
     display: flex;
     padding-left: 10vw;
     padding-right: 10vw;
+    flex-wrap: wrap;
 
 }
 
